# fast-sim

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml
.fast-sim-template/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README_TEMPLATE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  runner.py  scenarios.py
examples/: README.md  mm1_queue.py  seir_epidemic.py  sir_minimal.py  traffic_cellular_automata.py  traffic_queue.py
examples/configs/: sir_demo.yaml  traffic_demo.yaml
fast_sim/: __init__.py  cli.py
fast_sim/core/: __init__.py  engine_event.py  engine_step.py  event_queue.py  metrics.py  rng.py  state.py  timeline.py  tracing.py
fast_sim/examples/: __init__.py  mm1_queue.py  seir_epidemic.py  traffic_ca.py
fast_sim/io/: __init__.py  config.py  datasets.py  experiment.py  results.py
fast_sim/modeling/: __init__.py  agent.py  distributions.py  policies.py  space.py
fast_sim/viz/: __init__.py  quickplots.py
pandas/: __init__.py
rich/: __init__.py  console.py  progress.py
ruamel/: __init__.py  yaml.py
src/fast_sim/: __init__.py  agents.py  cli.py  config.py  core.py  metrics.py  random.py  scheduler.py  version.py
src/fast_sim/benchmarks/: __init__.py  runner.py  scenarios.py
tests/: test_api_smoke.py  test_cli.py  test_engine_event.py  test_engine_step.py  test_event_queue.py  test_examples_run.py  test_experiment_sweeps.py  test_io_results.py  test_rng_and_repro.py  test_rng_determinism.py  test_sir_dynamics.py
typer/: __init__.py
