[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-sim"
version = "0.1.0"
description = "Fast, minimal framework for agent-based and discrete-event simulations"
readme = "README.md"
authors = [{name = "Fast Sim Contributors"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
numba = ["numba>=0.57"]
networkx = ["networkx>=3"]
matplotlib = ["matplotlib>=3.7"]
polars = ["polars>=0.19"]

[project.urls]
Homepage = "https://example.com/fast-sim"
Repository = "https://example.com/fast-sim"

[project.scripts]
fsim = "fast_sim.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["fast_sim*", "tests*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
select = ["E", "F", "I", "B", "UP", "S", "W", "N", "A", "C4", "TID", "RUF"]
ignore = ["A003", "S101", "E501"]
line-length = 88

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = 3.10
strict = true
mypy_path = ["."]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --disable-warnings"
pythonpath = "."
