[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "fast-sim"
dynamic = ["version"]
description = "Vectorised micro and discrete-event simulation with deterministic RNG and experiment tooling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
authors = [{ name = "Simon Villani" }]
keywords = ["simulation", "agent-based", "discrete-event", "numpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21",
    "pydantic>=1.10,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.1.8",
    "mypy>=1.7",
    "pyyaml>=6",
    "typer[all]>=0.9",
    "rich>=13",
]
bench = [
    "simpy>=4 ; python_version >= '3.10'",
    "mesa>=1.3 ; python_version >= '3.10'",
]
all = ["fast-sim[dev,bench]"]

[project.urls]
Homepage = "https://github.com/simonv3/fast-sim"
Documentation = "https://github.com/simonv3/fast-sim"
Source = "https://github.com/simonv3/fast-sim"
Issues = "https://github.com/simonv3/fast-sim/issues"

[project.scripts]
fastsim = "fast_sim.cli:app"

[tool.hatch.version]
path = "src/fast_sim/version.py"

[tool.pytest.ini_options]
addopts = "-ra"

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
