[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast-sim"
dynamic = ["version"]
description = "Vectorised micro/agent-based and discrete-event simulation with deterministic RNG and batteries-included experiment tooling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Simon Villani" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "numpy>=1.24",
    "pydantic>=2,<3",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.5",
    "mypy>=1.8",
    "build>=1.0",
    "twine>=5.0",
    "coverage>=7",
]
bench = [
    "simpy>=4; python_version>='3.10'",
    "mesa>=2; python_version>='3.10'",
]
viz = [
    "rich>=13",
    "matplotlib>=3.8",
]
all = ["fast-sim[dev,bench,viz]"]

[project.urls]
Homepage = "https://github.com/mmprotest/fast-sim"
Repository = "https://github.com/mmprotest/fast-sim"
Issues = "https://github.com/mmprotest/fast-sim/issues"

[project.scripts]
fsim = "fast_sim.cli:app"

[tool.hatch.version]
path = "src/fast_sim/version.py"

[tool.pytest.ini_options]
addopts = "-ra"

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
